--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <link rel="stylesheet" href="/styles.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | Huddle landing page with single introductory section</title>
@@ -15,19 +21,39 @@
   </style>
 </head>
 <body>
-<img src="/images/bg-desktop.svg" alt="">
-  Build The Community Your Fans Will Love
+  <div>
+  <div class="backdrop"><img src="images/bg-desktop.svg" alt="Back Drop"></div>
+  <div class="logo"><img src="images/logo.svg" alt="Logo"></div>
+  <div class="picture"><img src="images/illustration-mockups.svg" alt=" illustration-mockups"></div>
+  
+  
+  <div class="right-section">
+    <div>
+      <h1>Build The Community Your Fans Will Love</h1> 
 
-  Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
-  Create connections with your users as you engage in genuine discussion. 
-
-  Register
-
+      <p class="paragraph">Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
+      Create connections with your users as you engage in genuine discussion. </p>
+    
+    </div>
+    <div> 
+   <button> Register</button>
+    </div>
+  </div>
+      <div class="link-container">
+        <img class="github" src="/images/github-brands.svg" alt="GitHuib Link">
+        <img class="youtube" src="/images/youtube-brands.svg" alt="YouTube Link">
+        <img class="linkedin" src="/images/linkedin-brands.svg" alt="Linkedin Link">
+      </div>
+  <div class="info">
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="https://www.youtube.com/channel/UCCDWcbyG8rf6TC41EDGD4Rg" target="_blank">Hazel Black</a>.
     </p>
   </footer>
+ 
+
+</div>
+</div>
 </body>
 </html>
