--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
 </head>
 <body>
   
-  <div class="backdrop"><img src="images/bg-desktop.svg" alt="Back Drop"></div>
-  <div class="logo"><img src="images/logo.svg" alt="Logo"></div>
-  <div class="picture"><img src="images/illustration-mockups.svg" alt=" illustration-mockups"></div>
+  
+  <div class="backdrop"><img class="background-image" src="images/bg-desktop.svg" alt="Back Drop"></div>
+  <img class="background-image-mobile" src="/images/bg-mobile.svg">
+  <img class="logo" src="images/logo.svg" alt="Logo">
+  <div class="picture"><img class="picture" src="images/illustration-mockups.svg" alt=" illustration-mockups"></div>
   
   
   <div class="right-section">
