--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
   <link rel="stylesheet" href="styles.css">
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
   
   <title>Frontend Mentor | Huddle landing page with single introductory section</title>
 
@@ -20,7 +20,7 @@
   
   
   <div class="backdrop"><img class="background-image" src="images/bg-desktop.svg" alt="Back Drop"></div>
-  <img class="background-image-mobile" src="/images/bg-mobile.svg">
+  <img class="background-image-mobile" src="images/bg-mobile.svg">
   <img class="logo" src="images/logo.svg" alt="Logo">
   <div class="picture"><img class="picture" src="images/illustration-mockups.svg" alt=" illustration-mockups"></div>
   
